tests/parse_only/errors/syn_lex/e1.src
.IPPcode21

ADD GF@a GF@b GF@c GF@d